# ecom_task1

./: pyproject.toml
src/: __init__.py  main.py
src/config/: __init__.py  db.py
src/core/: client.py  service.py
src/service/: __init__.py  service.py
